# bedrock-redteam

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: config.py  handler.py  prompts.py  tools.py
attacks/: __init__.py  attack_01_direct_injection.py  attack_02_obfuscated.py  attack_03_cross_tool.py  attack_04_output_handling.py  run.py  run_all.py  scoring.py
attacks/smoke/: run_smoke_tests.py
bedrock-redteam/: .gitignore  README.md  pyproject.toml
bedrock-redteam/app/: __init__.py  config.py  handler.py  main.py  prompts.py  seed_policy.py  tools.py
bedrock-redteam/attacks/: __init__.py  attack_01_direct_injection.py  attack_02_obfuscated.py  attack_05_advanced.py  payloads.py  run.py  scoring.py
bedrock-redteam/attacks/payloads/: README.md
bedrock-redteam/attacks/smoke/: __init__.py  run_smoke_tests.py
bedrock-redteam/evidence/: README.md
bedrock-redteam/guardrails/: __init__.py  guardrail_config.py
bedrock-redteam/guardrails/fixtures/: README.md  clean_returns_policy.md
bedrock-redteam/infra/: __init__.py  agent_stack.py  app.py  cdk.json  guardrail_stack.py  observability_stack.py  policy_bucket_stack.py
bedrock-redteam/tests/: __init__.py  test_infra.py  test_payloads.py  test_scoring.py  test_tools.py
evidence/: architecture-diagram.drawio
guardrails/: guardrail_config.py
guardrails/fixtures/: clean_returns_policy.md
infra/: __init__.py  agent_stack.py  app.py  cdk.json  guardrail_stack.py  policy_bucket_stack.py
tests/: test_infra.py  test_payloads.py  test_scoring.py  test_tools.py
