[project]
name = "bedrock-redteam"
version = "0.1.0"
description = "Red-team experiment: indirect prompt injection against a Bedrock AgentCore customer-support chatbot"
requires-python = ">=3.11"
license = { text = "MIT-0" }
authors = [{ name = "Security Red Team" }]

dependencies = [
    "aws-cdk-lib>=2.170.0",
    "constructs>=10.0.0",
    "boto3>=1.35.0",
    "pydantic>=2.0.0",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "bedrock-agentcore>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "boto3-stubs[bedrock,bedrock-agent,bedrock-agent-runtime,s3]>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
